compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__local_variable_ignore_within_function.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1033
expression: "\nfn main(a, b, z) {\n    Nil\n}\n"
---
fn main(a, b, |z) {
    Nil
}


----- Completion content -----
