compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__local_variable_ignored.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nfn wibble() {\n  let a = 1\n  let _b = 2\n\n}\n"
---
fn wibble() {
  let a = 1
  let _b = 2
|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
a
  kind:   Variable
  detail: Int
  sort:   2_a
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:0-4:0]: "a"
wibble
  kind:   Function
  detail: fn() -> Int
  sort:   2_wibble
  desc:   app
  edits:
    [4:0-4:0]: "wibble"
